# traewelloxid

./: .gitignore  Cargo.toml  config.json  index.html  package-lock.json  package.json
public/fonts/Nunito/: Nunito.css
public/sass/: app.scss
src/: app.rs  main.rs  types.rs
src/agent/: config.rs  login.rs  mod.rs
src/components/: navbar.rs
src/page/: dashboard.rs  home.rs  login.rs  mod.rs
src/service/: config.rs  dashboard.rs  login.rs  mod.rs
