[package]
name = "traewelloxid"
version = "0.1.0"
authors = ["Alexander Sieg <alex@xanderio.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.68"
log = "0.4.11"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"
wasm-logger = "0.2.0"
yew = "0.17.3"
yew-router = "0.14.0"
serde_derive = "1.0.116"
serde = "1.0.116"
anyhow = "1.0.32"
thiserror = "1.0.20"
serde_json = "1.0.57"
lazy_static = "1.4.0"
validator = "0.11.0"
